--- a/code/chap01ex.ipynb
+++ b/code/chap01ex.ipynb
@@ -247,6 +247,19 @@
    ],
    "source": [
     "preg = nsfg.ReadFemPreg()\n",
+    "'''    \n",
+    "    def ReadFemPreg(dct_file='2002FemPreg.dct', dat_file='2002FemPreg.dat.gz'):\n",
+    "        \n",
+    "        \"\"\"Reads the NSFG pregnancy data.\n",
+    "        dct_file: string file name\n",
+    "        dat_file: string file name\n",
+    "        returns: DataFrame\n",
+    "        \"\"\"\n",
+    "            dct = thinkstats2.ReadStataDct(dct_file)\n",
+    "            df = dct.ReadFixedWidth(dat_file, compression='gzip')\n",
+    "            CleanFemPreg(df)\n",
+    "            return df\n",
+    "'''\n",
     "preg.head()"
    ]
   },
@@ -347,7 +360,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -589,7 +604,7 @@
     {
      "data": {
       "text/plain": [
-       "array([4, 4, 4, 4, 4, 4, 1])"
+       "array([4, 4, 4, 4, 4, 4, 1], dtype=int64)"
       ]
      },
      "execution_count": 12,
@@ -1348,7 +1363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
