--- a/code/chap01ex.ipynb
+++ b/code/chap01ex.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "[5 rows x 244 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,9 +265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\ndef CleanFemPreg(df):\\n    \"\"\"Recodes variables from the pregnancy frame.\\n    df: DataFrame\\n    \"\"\"\\n    # mother\\'s age is encoded in centiyears; convert to years\\n    df.agepreg /= 100.0\\n\\n    # birthwgt_lb contains at least one bogus value (51 lbs)\\n    # replace with NaN\\n    df.loc[df.birthwgt_lb > 20, \\'birthwgt_lb\\'] = np.nan\\n    \\n    # replace \\'not ascertained\\', \\'refused\\', \\'don\\'t know\\' with NaN\\n    na_vals = [97, 98, 99]\\n    df.birthwgt_lb.replace(na_vals, np.nan, inplace=True)\\n    df.birthwgt_oz.replace(na_vals, np.nan, inplace=True)\\n    df.hpagelb.replace(na_vals, np.nan, inplace=True)\\n\\n    df.babysex.replace([7, 9], np.nan, inplace=True)\\n    df.nbrnaliv.replace([9], np.nan, inplace=True)\\n\\n    # birthweight is stored in two columns, lbs and oz.\\n    # convert to a single column in lb\\n    # NOTE: creating a new column requires dictionary syntax,\\n    # not attribute assignment (like df.totalwgt_lb)\\n    df[\\'totalwgt_lb\\'] = df.birthwgt_lb + df.birthwgt_oz / 16.0    \\n\\n    # due to a bug in ReadStataDct, the last variable gets clipped;\\n    # so for now set it to NaN\\n    df.cmintvw = np.nan'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "def CleanFemPreg(df):\n",
@@ -747,13 +758,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -771,11 +775,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0     4413\n",
+       "2.0     2874\n",
+       "3.0     1234\n",
+       "4.0      421\n",
+       "5.0      126\n",
+       "6.0       50\n",
+       "7.0       20\n",
+       "8.0        7\n",
+       "9.0        2\n",
+       "10.0       1\n",
+       "Name: birthord, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "preg['birthord'].value_counts()\n",
+    "## Matches the results in the codebook"
    ]
   },
   {
@@ -787,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +822,7 @@
        "4445"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,11 +840,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13 WEEKS OR LESS: 3522\n",
+      "14-26 WEEKS: 793\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "print('13 WEEKS OR LESS:',preg[preg['prglngth'] <= 13].count().loc['prglngth'])\n",
+    "print('14-26 WEEKS:',preg[(preg['prglngth'] >= 14)&(preg['prglngth'] <= 26)].count().loc['prglngth'])"
    ]
   },
   {
@@ -830,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +877,7 @@
        "7.265628457623368"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,11 +895,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.984382606771542"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "preg['totalwgt_kg'] = preg.totalwgt_lb*2.2\n",
+    "preg['totalwgt_kg'].mean()"
    ]
   },
   {
@@ -873,11 +923,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "resp = nsfg.ReadFemResp()"
+    "resp = nsfg.ReadFemResp()\n",
+    "'''\n",
+    "def ReadFemResp(dct_file='2002FemResp.dct',\n",
+    "                dat_file='2002FemResp.dat.gz',\n",
+    "                nrows=None):\n",
+    "    \"\"\"Reads the NSFG respondent data.\n",
+    "    dct_file: string file name\n",
+    "    dat_file: string file name\n",
+    "    returns: DataFrame\n",
+    "    \"\"\"\n",
+    "    dct = thinkstats2.ReadStataDct(dct_file)\n",
+    "    df = dct.ReadFixedWidth(dat_file, compression='gzip', nrows=nrows)\n",
+    "    CleanFemResp(df)\n",
+    "    return df'''"
    ]
   },
   {
@@ -889,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1157,7 @@
        "[5 rows x 3087 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,11 +1175,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "44\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "#print(resp['age_r'].value_counts())\n",
+    "print(resp['age_r'].min())\n",
+    "print(resp['age_r'].max())"
    ]
   },
   {
@@ -1128,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1295,7 @@
        "[1 rows x 3087 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1348,6 @@
        "      <th>nbrnaliv</th>\n",
        "      <th>multbrth</th>\n",
        "      <th>...</th>\n",
-       "      <th>laborfor_i</th>\n",
        "      <th>religion_i</th>\n",
        "      <th>metro_i</th>\n",
        "      <th>basewgt</th>\n",
@@ -1284,6 +1357,7 @@
        "      <th>sest</th>\n",
        "      <th>cmintvw</th>\n",
        "      <th>totalwgt_lb</th>\n",
+       "      <th>totalwgt_kg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1302,7 +1376,6 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>3247.916977</td>\n",
        "      <td>5123.759559</td>\n",
        "      <td>5556.717241</td>\n",
@@ -1310,6 +1383,7 @@
        "      <td>18</td>\n",
        "      <td>NaN</td>\n",
        "      <td>6.8750</td>\n",
+       "      <td>15.1250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2611</th>\n",
@@ -1326,7 +1400,6 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>3247.916977</td>\n",
        "      <td>5123.759559</td>\n",
        "      <td>5556.717241</td>\n",
@@ -1334,6 +1407,7 @@
        "      <td>18</td>\n",
        "      <td>NaN</td>\n",
        "      <td>5.5000</td>\n",
+       "      <td>12.1000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2612</th>\n",
@@ -1350,7 +1424,6 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>3247.916977</td>\n",
        "      <td>5123.759559</td>\n",
        "      <td>5556.717241</td>\n",
@@ -1358,6 +1431,7 @@
        "      <td>18</td>\n",
        "      <td>NaN</td>\n",
        "      <td>4.1875</td>\n",
+       "      <td>9.2125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2613</th>\n",
@@ -1374,7 +1448,6 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>3247.916977</td>\n",
        "      <td>5123.759559</td>\n",
        "      <td>5556.717241</td>\n",
@@ -1382,10 +1455,11 @@
        "      <td>18</td>\n",
        "      <td>NaN</td>\n",
        "      <td>6.8750</td>\n",
+       "      <td>15.1250</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4 rows × 244 columns</p>\n",
+       "<p>4 rows × 245 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1395,28 +1469,28 @@
        "2612    2298         3        NaN        NaN       NaN       NaN       6.0   \n",
        "2613    2298         4        NaN        NaN       NaN       NaN       6.0   \n",
        "\n",
-       "      pregend2  nbrnaliv  multbrth     ...       laborfor_i  religion_i  \\\n",
-       "2610       NaN       1.0       NaN     ...                0           0   \n",
-       "2611       NaN       1.0       NaN     ...                0           0   \n",
-       "2612       NaN       1.0       NaN     ...                0           0   \n",
-       "2613       NaN       1.0       NaN     ...                0           0   \n",
+       "      pregend2  nbrnaliv  multbrth     ...       religion_i  metro_i  \\\n",
+       "2610       NaN       1.0       NaN     ...                0        0   \n",
+       "2611       NaN       1.0       NaN     ...                0        0   \n",
+       "2612       NaN       1.0       NaN     ...                0        0   \n",
+       "2613       NaN       1.0       NaN     ...                0        0   \n",
        "\n",
-       "      metro_i      basewgt  adj_mod_basewgt     finalwgt  secu_p  sest  \\\n",
-       "2610        0  3247.916977      5123.759559  5556.717241       2    18   \n",
-       "2611        0  3247.916977      5123.759559  5556.717241       2    18   \n",
-       "2612        0  3247.916977      5123.759559  5556.717241       2    18   \n",
-       "2613        0  3247.916977      5123.759559  5556.717241       2    18   \n",
+       "          basewgt  adj_mod_basewgt     finalwgt  secu_p  sest  cmintvw  \\\n",
+       "2610  3247.916977      5123.759559  5556.717241       2    18      NaN   \n",
+       "2611  3247.916977      5123.759559  5556.717241       2    18      NaN   \n",
+       "2612  3247.916977      5123.759559  5556.717241       2    18      NaN   \n",
+       "2613  3247.916977      5123.759559  5556.717241       2    18      NaN   \n",
        "\n",
-       "      cmintvw  totalwgt_lb  \n",
-       "2610      NaN       6.8750  \n",
-       "2611      NaN       5.5000  \n",
-       "2612      NaN       4.1875  \n",
-       "2613      NaN       6.8750  \n",
+       "      totalwgt_lb  totalwgt_kg  \n",
+       "2610       6.8750      15.1250  \n",
+       "2611       5.5000      12.1000  \n",
+       "2612       4.1875       9.2125  \n",
+       "2613       6.8750      15.1250  \n",
        "\n",
-       "[4 rows x 244 columns]"
+       "[4 rows x 245 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,11 +1508,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1069    44\n",
+       "Name: age_r, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "resp[resp['caseid'] == 1]['age_r']"
    ]
   },
   {
@@ -1450,11 +1536,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2610    40\n",
+       "2611    36\n",
+       "2612    30\n",
+       "2613    40\n",
+       "Name: prglngth, dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "preg[preg['caseid'] == 2298]['prglngth']"
    ]
   },
   {
@@ -1466,11 +1567,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>caseid</th>\n",
+       "      <th>pregordr</th>\n",
+       "      <th>howpreg_n</th>\n",
+       "      <th>howpreg_p</th>\n",
+       "      <th>moscurrp</th>\n",
+       "      <th>nowprgdk</th>\n",
+       "      <th>pregend1</th>\n",
+       "      <th>pregend2</th>\n",
+       "      <th>nbrnaliv</th>\n",
+       "      <th>multbrth</th>\n",
+       "      <th>...</th>\n",
+       "      <th>religion_i</th>\n",
+       "      <th>metro_i</th>\n",
+       "      <th>basewgt</th>\n",
+       "      <th>adj_mod_basewgt</th>\n",
+       "      <th>finalwgt</th>\n",
+       "      <th>secu_p</th>\n",
+       "      <th>sest</th>\n",
+       "      <th>cmintvw</th>\n",
+       "      <th>totalwgt_lb</th>\n",
+       "      <th>totalwgt_kg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5515</th>\n",
+       "      <td>5012</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2335.279149</td>\n",
+       "      <td>2846.79949</td>\n",
+       "      <td>4744.19135</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>13.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 245 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      caseid  pregordr  howpreg_n  howpreg_p  moscurrp  nowprgdk  pregend1  \\\n",
+       "5515    5012         1        NaN        NaN       NaN       NaN       6.0   \n",
+       "\n",
+       "      pregend2  nbrnaliv  multbrth     ...       religion_i  metro_i  \\\n",
+       "5515       NaN       1.0       NaN     ...                0        0   \n",
+       "\n",
+       "          basewgt  adj_mod_basewgt    finalwgt  secu_p  sest  cmintvw  \\\n",
+       "5515  2335.279149       2846.79949  4744.19135       2    18      NaN   \n",
+       "\n",
+       "      totalwgt_lb  totalwgt_kg  \n",
+       "5515          6.0         13.2  \n",
+       "\n",
+       "[1 rows x 245 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "preg[preg['caseid'] == 5012]"
    ]
   },
   {
