--- a/code/chap01ex.ipynb
+++ b/code/chap01ex.ipynb
@@ -1567,114 +1567,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>caseid</th>\n",
-       "      <th>pregordr</th>\n",
-       "      <th>howpreg_n</th>\n",
-       "      <th>howpreg_p</th>\n",
-       "      <th>moscurrp</th>\n",
-       "      <th>nowprgdk</th>\n",
-       "      <th>pregend1</th>\n",
-       "      <th>pregend2</th>\n",
-       "      <th>nbrnaliv</th>\n",
-       "      <th>multbrth</th>\n",
-       "      <th>...</th>\n",
-       "      <th>religion_i</th>\n",
-       "      <th>metro_i</th>\n",
-       "      <th>basewgt</th>\n",
-       "      <th>adj_mod_basewgt</th>\n",
-       "      <th>finalwgt</th>\n",
-       "      <th>secu_p</th>\n",
-       "      <th>sest</th>\n",
-       "      <th>cmintvw</th>\n",
-       "      <th>totalwgt_lb</th>\n",
-       "      <th>totalwgt_kg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5515</th>\n",
-       "      <td>5012</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2335.279149</td>\n",
-       "      <td>2846.79949</td>\n",
-       "      <td>4744.19135</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>13.2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 245 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      caseid  pregordr  howpreg_n  howpreg_p  moscurrp  nowprgdk  pregend1  \\\n",
-       "5515    5012         1        NaN        NaN       NaN       NaN       6.0   \n",
-       "\n",
-       "      pregend2  nbrnaliv  multbrth     ...       religion_i  metro_i  \\\n",
-       "5515       NaN       1.0       NaN     ...                0        0   \n",
-       "\n",
-       "          basewgt  adj_mod_basewgt    finalwgt  secu_p  sest  cmintvw  \\\n",
-       "5515  2335.279149       2846.79949  4744.19135       2    18      NaN   \n",
-       "\n",
-       "      totalwgt_lb  totalwgt_kg  \n",
-       "5515          6.0         13.2  \n",
-       "\n",
-       "[1 rows x 245 columns]"
+       "5515    6.0\n",
+       "Name: birthwgt_lb, dtype: float64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "preg[preg['caseid'] == 5012]"
+    "preg[preg['caseid'] == 5012]['birthwgt_lb']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
