--- a/code/chap09ex.ipynb
+++ b/code/chap09ex.ipynb
@@ -57,14 +57,26 @@
     "        self.data = data\n",
     "        self.MakeModel()\n",
     "        self.actual = self.TestStatistic(data)\n",
+    "        \"\"\"    \n",
+    "        def MakeModel(self):\n",
+    "         #Build a model of the null hypothesis.\n",
+    "        group1, group2 = self.data\n",
+    "        self.n, self.m = len(group1), len(group2)\n",
+    "        self.pool = np.hstack((group1, group2))\"\"\"\n",
     "\n",
     "    def PValue(self, iters=1000):\n",
     "        self.test_stats = [self.TestStatistic(self.RunModel()) \n",
     "                           for _ in range(iters)]\n",
-    "\n",
+    "\"\"\"\n",
+    "    def RunModel(self):\n",
+    "        # Run the model of the null hypothesis.returns: simulated data\n",
+    "        np.random.shuffle(self.pool)\n",
+    "        data = self.pool[:self.n], self.pool[self.n:]\n",
+    "        return data\n",
+    "    \n",
     "        count = sum(1 for x in self.test_stats if x >= self.actual)\n",
     "        return count / iters\n",
-    "\n",
+    "\"\"\"\n",
     "    def TestStatistic(self, data):\n",
     "        raise UnimplementedMethodException()\n",
     "\n",
@@ -119,7 +131,7 @@
     {
      "data": {
       "text/plain": [
-       "0.065"
+       "0.05"
       ]
      },
      "execution_count": 4,
@@ -815,7 +827,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
